# mai-mine

back-end/: .gitignore  README.md  maimine.db  main.py  pyproject.toml
back-end/alembic/: env.py
back-end/alembic/versions/: 47f7b1a2150b_added_song_jacket_id_for_the_jacket_url.py  d50b71afc01f_remove_song_jacket_id.py
back-end/core/: database.py
back-end/features/scores/: models.py  router.py  schemas.py  utils.py
